Fix table heading text wrap and clean up CSS

--- a/static/css/site_styles.css
+++ b/static/css/site_styles.css
@@ -1,87 +1,3 @@
-/*input[type=text] {*/
-/*    width: 100%;*/
-/*    padding: 20px;*/
-/*    margin: 8px 0;*/
-/*    display: inline-block;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*    box-sizing: border-box;*/
-/*    font-size: 1em;*/
-/*}*/
-
-/*input[type=password] {*/
-/*    width: 100%;*/
-/*    padding: 20px;*/
-/*    margin: 8px 0;*/
-/*    display: inline-block;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*    box-sizing: border-box;*/
-/*    font-size: 1em;*/
-/*}*/
-
-/*input[type=submit] {*/
-/*    width: 100%;*/
-/*    background-color: #4CAF50;*/
-/*    color: #fff;*/
-/*    padding: 25px 20px;*/
-/*    margin: 8px 0;*/
-/*    border: none;*/
-/*    border-radius: 4px;*/
-/*    cursor: pointer;*/
-/*    font-size: 1em;*/
-/*    font-weight: 700;*/
-/*}*/
-
-/*input[type=submit]:hover {*/
-/*    background-color: #45a049;*/
-/*}*/
-
-/*.center_vertical {*/
-/*    margin: 0;*/
-/*    position: absolute;*/
-/*    top: 50%;*/
-/*    left: 50%;*/
-/*    -ms-transform: translate(-50%, -50%);*/
-/*    transform: translate(-50%, -50%);*/
-/*}*/
-
-/*.center_horizontal {*/
-/*    margin: auto;*/
-/*    width: 50%;*/
-/*    padding: 10px;*/
-/*}*/
-
-
-/*body {*/
-/*    font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;*/
-/*    font-size: 1em;*/
-/*    !*width: 90%;*!*/
-/*}*/
-
-/*.error {*/
-/*    border: solid red;*/
-/*    text-align: center;*/
-/*}*/
-
-/*h1, h2, h3, h4 {*/
-/*    text-align: center;*/
-/*}*/
-
-/*button {*/
-/*    background-color: #4CAF50;*/
-/*    color: #fff;*/
-/*    padding: 15px 10px;*/
-/*    margin: 8px 0;*/
-/*    border: none;*/
-/*    border-radius: 4px;*/
-/*    cursor: pointer;*/
-/*    font-size: 1em;*/
-/*    font-weight: 700;*/
-/*}*/
-
-/*!*!*############################################*!*!*/
-
 .navbar-brand img {
     height: 2em;
     width: 4em;
@@ -94,36 +10,6 @@
 .table-hover tbody tr:hover td {
     background-color: #ff0;
 }
-
-tr {
-   line-height: 5px;
-}
-
-
-/*#################################################*/
-
-/*html,*/
-/*body {*/
-/*  height: 100%;*/
-/*}*/
-
-/*body {*/
-/*  display: -ms-flexbox;*/
-/*  display: -webkit-box;*/
-/*  display: flex;*/
-/*  -ms-flex-align: center;*/
-/*  -ms-flex-pack: center;*/
-/*  -webkit-box-align: center;*/
-/*  align-items: center;*/
-/*  -webkit-box-pack: center;*/
-/*  justify-content: center;*/
-/*  padding-top: 40px;*/
-/*  padding-bottom: 40px;*/
-/*  background-color: #f5f5f5;*/
-/*}*/
-
-
-/* ### Bootstrap Copy Paste ### */
 
 .form-signin {
   width: 100%;
